--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/zereshkpolo.html">Zereshk Polo</a>
-  
-  
-
+  <ul>
+    <li><a href="recipes/zereshkpolo.html">Zereshk Polo</a></li>
+    <li><a href="recipes/ghormehsabsi.html">Ghorme Sabzi</a></li>
+    <li><a href="recipes/chelokabab.html">Chelo Kabab</a></li>
+  </ul>
 
 
 
