--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Odin Recipes</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Odin Recipes</h1>
